# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("../../../../code_signature.gni")

ohos_fuzztest("InitLocalCertificateStubFuzzTest") {
  module_out_path = "${fuzz_module_output_path}"
  fuzz_config_file = "."

  sources = [ "initlocalcertificatestub_fuzzer.cpp" ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  deps = [ "${code_signature_root_dir}/interfaces/innerkits/local_code_sign:liblocal_code_sign_sdk" ]

  include_dirs = [
    "${code_signature_root_dir}/interfaces/innerkits/local_code_sign/include",
    "${code_signature_root_dir}/services/local_code_sign/include",
  ]
  external_deps = [
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
  ]

  sources += [
    "${code_signature_root_dir}/services/local_code_sign/src/local_code_sign_service.cpp",
    "${code_signature_root_dir}/services/local_code_sign/src/local_code_sign_stub.cpp",
    "${code_signature_root_dir}/services/local_code_sign/src/local_sign_key.cpp",
    "${code_signature_root_dir}/services/local_code_sign/src/permission_utils.cpp",
    "${code_signature_root_dir}/utils/src/cert_utils.cpp",
    "${code_signature_root_dir}/utils/src/file_helper.cpp",
  ]

  include_dirs += [
    "${code_signature_root_dir}/interfaces/innerkits/local_code_sign/include",
    "${code_signature_root_dir}/utils/include",
  ]
  public_configs = [ "${code_signature_root_dir}:common_public_config" ]
  configs = [ "${code_signature_root_dir}:common_utils_config" ]
  deps += [ "${code_signature_root_dir}/utils:fsverity_sign_src_set" ]
  external_deps += [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "fsverity-utils:libfsverity_utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "huks:libhukssdk",
    "init:libbegetutil",
    "ipc:ipc_core",
    "openssl:libcrypto_shared",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
